# CodeRes_Cpp

./: .clang-format  .gitignore  .sess.vim  2DArray.cpp  2D_array.cpp  CPU数目.c  ContainerArrIter.cpp  CopyConstructor_引用_返回值_Overload.cpp  Non-reentrant-demo-不可重入.c  RefDemo.cpp  SafeLess.cpp  StringContainer.cpp  Yanghui_Triangle.cc  addresses.cpp  aio_read.c  all_permutation.cpp  all_permutation1.cpp  assert_demo.cpp  async_call_member_fun.cc  async_call_member_fun_in_lambda.cc  async_with_shared_ptr.cc  at_exit.cc  atoi.cpp  auto_register_before_main.cpp  bad_erase.cpp  bad_stream.cpp  base.cpp  before_and_after_main.cpp  before_main_先于main执行.cpp  bitset_处理二进制题目.cpp  boost_shared_ptr_bool_智能指针判断为空.cpp  bthread_mem_fun.cpp  build_timestamp.cpp  call_operator_virtual.cpp  call_virtual_func_in_constructor_destructor.cpp  call_virtual_in_constructor_destructor.cpp  canvas.cpp  combine_array.cpp  common_prefix.cpp  config_reader.h  (+228 more)
Baidu/: 02.c  base.cpp
BazelProject/: .bazelrc  WORKSPACE
ClassMgr/: A1.h  A2.cpp  Base.cpp  Base.h  BaseMgr.cpp  BaseMgr.h  Derived1.cpp  Derived1.h  Derived2.cpp  main.cpp
ClassMgr2/: A1.cpp  A2.h  Base.h  BaseMgr.h  Derived2.h  Makefile
CodeSamples/: README.txt
CodeStyle/: exception_leak.cpp  move_demo.cpp  perfect_forwarding.cpp
Cpp11/: FILE_unique_ptr_lambda_deleter_decltype.cpp  MyMove_实现std_move.cpp  aligned_storage.cpp  all_refs_overload.cpp  bind_by_ref.cpp  bind_demo.cpp  bind_function_container.cpp  bind_mem_fn_绑定成员函数.cpp  bind_mem_fun.cpp  bind_member.cpp  boost_future_then.cpp  const_shared_ptr.cpp  constexpr_string.cpp  exception_ptr.cpp  factory_bind_with_variadic_template.cpp  function_callable_inherit.cpp  hash_demo.cpp  initializer_list.cpp  initializer_list_arg.cc  lambda_auto_param.cpp  lambda_demo.cpp  make_cleanup.cpp  member_function_ptr_std_function.cpp  move_constructible.cpp  move_constructor_demo.cpp  noexcept.cpp  on_finish.cpp  promise_demo.cpp  promise_demo1.cpp  promise_throw_exception.cpp  ref_wrapper.cpp  remove_pointer.cpp  remove_ref.cpp  result_of_demo.cpp  return_std_move.cpp  rvalue_ref_accept.cpp  rvalue_ref_demo.cpp  rvalue_ref_overloading_函数重载.cpp  rvalue_ref_引用类型.cpp  shared_from_this.cpp  (+39 more)
Cpp14/: decltype_with_decay.cc  heterogeneous_lookup.cpp
DataStructure/: trie.hpp
Effective_Modern_Cpp/: item_14_noexcept_move.cc  item_15_constexpr_class.cc  item_15_constexpr_fun_runtime.cc  item_24_omni_func_timer.cc  item_2_decltype_auto.cc  item_36_realasync_variadic_template.cpp
Effective_STL/: associative_container_erase.cpp  erase_remove.cpp  for_each_transform.cpp  list_remove_if.cpp  seq_erase.cpp
HDU/: 2602.cpp
Intel_TBB/: test.cpp
MS/: B.cpp  test.cpp  test1.cpp  传话游戏.cpp
MSTest/: 01.cpp  02.cpp
PAT/: 2-06数列求和.cpp  4-08目录树.cpp  base.cpp
STL_source_Notes/: iterator_notes.cpp
Templates/: 类模板特化.cpp
ThreadPoolOracle/: thr_pool.c  thr_pool.h
TypeCast/: const_cast.cpp  dynamic_cast.cpp  reinterpret_cast.cpp  static_cast.cpp
async_grpc_multithreading/: caculator.grpc.pb.cc  caculator.grpc.pb.h  (+8 more)
brpc/restful/: CMakeLists.txt  restful.pb.cc  restful.pb.h  restful.proto  restful_service_impl.cc  restful_service_impl.h  server.cc
ctranslate2/translate_server/: CMakeLists.txt  README.md  benchmark.sh  model_wrapper.cc  model_wrapper.h  restful_service_impl.cc  restful_service_impl.h  server.cc  task_queue.cc  task_queue.h  translate.pb.cc  translate.pb.h  translate.proto  translator.cc  translator.h  wrk.lua
ctranslate2/translate_server/sentence_split/: split.py
ctranslate2/translate_server/sentence_split/util/: detokenize.py  split_sentences.py  tokenize.py
event/: CMakeLists.txt  boost_asio.cpp  folly.cpp  vcpkg.json
(+1339 files in other folders)
